--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -1,5 +1,6 @@
 .userAvatar {
     height: 80px;
+    width: 80px;
     border-radius: 50%;
     border: 4px solid lightblue;
     object-fit: cover;
@@ -64,4 +65,8 @@
 .out-button{
     position: relative;
     right: -24px;
+}
+
+.imageDiv {
+    position: relative;
 }
