completed profile page functionality

--- a/client/src/components/Profile.css
+++ b/client/src/components/Profile.css
@@ -50,6 +50,12 @@
     transition: 0.2s;
 }
 
+#profile-button:hover {
+    color: white;
+    background-color: lightblue;
+    transition: 0.4s;
+  }
+
 .del-out {
     margin-top: 5px;
     text-align: center;
