--- a/client/src/components/Sidebar.css
+++ b/client/src/components/Sidebar.css
@@ -1,7 +1,7 @@
 
 .sidebar {
     width: 200px;
-    height: 70vh;
+    height: 78vh;
     background-color:lightblue;
     color: #fff;
     padding: 20px;
@@ -45,6 +45,17 @@
 .posts-tab {
 width: 71vw;
 }
+
+   @media screen and (max-height: 520px) {  
+   .sidebar {
+    height: 120vh;
+   }
+    }
+   @media screen and (min-height: 815px) {  
+   .sidebar {
+    height: 85vh;
+   }
+    }
 
    @media screen and (max-width: 760px) {
     .sidebar-allignment{
