--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -5,13 +5,13 @@
     text-align: center;
     position: relative;
     bottom: 0px;
-    width: 100%;
+    width: 100vw;
 }
 
 .footer-content {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: space-around;
     align-items: center;
 }
 
