--- a/client/src/pages/SignupPage.css
+++ b/client/src/pages/SignupPage.css
@@ -4,6 +4,8 @@
     align-items: center;
     justify-content: center;
     /* margin-bottom: 20vh; */
+    position: relative;
+    top: 13vh;
 }
 
 #signup-container {
@@ -75,7 +77,9 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-left: 30%;
+        margin-left: 27%;
+        position: relative;
+        top: 20vh;
     }
    
     }
